# secure-exec

./: .gitignore  CLAUDE.md  FUTURE_WORK.md  NPM_COMPAT_SPEC_2.md  README.md  SPEC.md  SPEC_2.md  SPEC_3.md  SPEC_OLD.md  TECHNICAL_POST.md  TEST_WASM_JS_BRIDGE.md  comparison.md  name_ideas.md  npm_compat_spec_3.md  package.json  pnpm-lock.yaml  prd.json  progress.txt  tsconfig.json  turbo.json
.agent/contracts/: kernel.md  node-bridge.md
.github/workflows/: e2e-docker.yml  pkg-pr-new.yaml
crates/v8-runtime/: Cargo.toml
crates/v8-runtime/npm/darwin-arm64/: package.json
crates/v8-runtime/npm/darwin-x64/: package.json
crates/v8-runtime/npm/linux-arm64-gnu/: package.json
crates/v8-runtime/npm/linux-x64-gnu/: package.json
crates/v8-runtime/npm/win32-x64/: package.json
crates/v8-runtime/src/: bridge.rs  execution.rs  host_call.rs  ipc.rs  isolate.rs  main.rs  session.rs  stream.rs  timeout.rs
docs/: HOST_EXEC_IPC.md  WHY_IS_IT_FASTER_THAN_VMS.md  api-reference.mdx  docs.json  node-compatability.mdx  nodejs-compatibility.mdx  nodejs-conformance-report.mdx  process-isolation.mdx  quickstart.mdx  security-model.mdx
docs-internal/: friction.md  nodejs-compat-roadmap.md  review-notes.md  spec-hardening.md  todo.md
docs-internal/arch/: kernel-integration.md  overview.md
docs-internal/friction/: sandboxed-node.md  secure-exec.md
docs-internal/node/: stdlib-compat.md
docs-internal/specs/: cli-tool-e2e.md  custom-bindings.md  docker-testing.md  kernel-consolidation.md  kernel-networking-consolidation.md
docs-internal/todo/: sandboxed-node.md
(+127 files in other folders)
